--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gif.js",
-  "version": "0.2.0",
+  "name": "@jayfong/gif.js",
+  "version": "0.2.1",
   "description": "JavaScript GIF encoding library",
   "author": "Johan Nordberg <code@johan-nordberg.com>",
   "main": "index.js",
@@ -12,7 +12,7 @@
     "uglify-js": "^2.7.5"
   },
   "scripts": {
-    "prepublish": "./bin/build"
+    "build": "./bin/build"
   },
   "browser": "./dist/gif.js",
   "keywords": [
